syntax = "proto3";

option go_package = "github.com/stackus/ftgogo/serviceapis/restaurantapi/pb;restaurantpb";

package restaurantpb;

import 'commonapi/pb/service.proto';

service RestaurantService {
  rpc CreateRestaurant(CreateRestaurantRequest) returns (CreateRestaurantResponse);
  rpc GetRestaurant(GetRestaurantRequest) returns (GetRestaurantResponse);
}

message CreateRestaurantRequest {
  message menuItem {
    string ID = 1;
    string Name = 2;
    int64 Price = 3;
  }

  message menu {
    repeated menuItem MenuItems = 1;
  }

  string Name = 1;
  commonpb.Address Address = 2;
  menu Menu = 3;
}

message CreateRestaurantResponse {
  string RestaurantID = 1;
}

message GetRestaurantRequest {
  string RestaurantID = 1;
}

message GetRestaurantResponse {
  message menuItem {
    string ID = 1;
    string Name = 2;
    int64 Price = 3;
  }

  message menu {
    repeated menuItem MenuItems = 1;
  }

  string RestaurantID = 1;
  string Name = 2;
  commonpb.Address Address = 3;
  menu Menu = 4;
}
